--- a/workspace/xdebug.ini
+++ b/workspace/xdebug.ini
@@ -1,12 +1,12 @@
 ; NOTE: The actual debug.so extention is NOT SET HERE but rather (/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini)
 
-; xdebug.remote_host=dockerhost
-xdebug.remote_connect_back=1
-xdebug.remote_port=9000
+xdebug.remote_host=dockerhost
+xdebug.remote_connect_back=0
+xdebug.remote_port=9001
 xdebug.idekey=PHPSTORM
 
-xdebug.remote_autostart=0
-xdebug.remote_enable=0
+xdebug.remote_autostart=1
+xdebug.remote_enable=1
 xdebug.cli_color=0
 xdebug.profiler_enable=0
 xdebug.profiler_output_dir="~/xdebug/phpstorm/tmp/profiling"
@@ -18,3 +18,4 @@ xdebug.var_display_max_children=-1
 xdebug.var_display_max_data=-1
 xdebug.var_display_max_depth=-1
 
+xdebug.remote_log=/tmp/xdebug.log
